--- a/style.css
+++ b/style.css
@@ -8,10 +8,52 @@ body {
 	min-height: 100vh;
 }
 
+select,
+input,
+button {
+	border: none;
+	background: none;
+	font-family: inherit;
+	font-size: inherit;
+	cursor: pointer;
+}
+
 header,
 footer,
 section {
 	padding-inline: max(24px, calc(50% - 1600px / 2));
+	width: 100%;
+}
+
+header,
+footer {
+	height: 10vh;
+}
+
+footer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 5em;
+}
+
+section {
+	height: 80vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: start;
+	row-gap: 5em;
+}
+
+.hidden {
+	visibility: hidden;
 }
 
 .grid {
@@ -19,18 +61,58 @@ section {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	column-gap: 10px;
+	row-gap: 1em;
 }
 
-.grid > div {
+.pokemon-container {
 	min-height: 50px;
-	background-color: blue;
+	background-color: color-mix(in hsl, blue 70%, white);
+
+	padding: 1em;
+
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 
 	align-content: center;
 	text-align: center;
 	color: white;
+	user-select: none;
 }
 
-button {
-	width: 100px;
-	height: 50px;
+#genSelect {
+	padding: 0.25em 1em;
+	border-radius: none;
+	border: 1px solid black;
+}
+
+#filterInput {
+	padding: 0.25em 1em;
+	border-radius: none;
+	border: 1px solid black;
+}
+
+.buttons {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.buttons > button {
+	align-self: end;
+	padding: 1em 1em;
+	border: 1px solid black;
+	user-select: none;
+}
+
+.buttons > button:hover {
+	background-color: aliceblue;
+}
+
+.type-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: start;
 }
