--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,13 @@
-@font-face {
-	font-family: "Bitter";
-	src: url(../assets/fonts/bitter-v39-latin/bitter-v39-latin-regular.woff2);
-}
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-html {
-	--color-poison: hsl(273, 60%, 53%);
-	--color-grass: hsl(96, 78%, 36%);
-	--color-fire: hsl(1, 78%, 49%);
-	--color-water: hsl(217, 88%, 59%);
-	--color-flying: hsl(212, 80%, 75%);
-	--color-bug: hsl(66, 100%, 32%);
-	--color-normal: hsl(90, 1%, 63%);
-	--color-electric: hsl(47, 100%, 48%);
-	--color-ice: hsl(194, 100%, 68%);
-	--color-fighting: hsl(31, 100%, 48%);
-	--color-ground: hsl(30, 76%, 31%);
-	--color-psychic: hsl(339, 77%, 57%);
-	--color-rock: hsl(54, 23%, 59%);
-	--color-ghost: hsl(294, 29%, 35%);
-	--color-dragon: hsl(235, 74%, 61%);
-	--color-dark: hsl(10, 13%, 27%);
-	--color-steel: hsl(198, 38%, 57%);
-	--color-fairy: hsl(295, 83%, 69%);
-
-	--border-radius: 15px;
-}
-
-body {
-	font-family: "Bitter";
-	min-height: 100vh;
-}
-
-select,
-input,
-button {
-	border: none;
-	background: none;
-	font-family: inherit;
-	font-size: inherit;
-	cursor: pointer;
-}
-
-header,
-footer,
-section {
-	padding-inline: max(24px, calc(50% - 1600px / 2));
-	width: 100%;
-}
-
-header,
-footer {
-	height: 10vh;
-}
-
-footer {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
-}
-
-header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	gap: 5em;
-}
-
-section {
-	position: relative;
-	height: 80vh;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: start;
-	row-gap: 5em;
-}
-
 img {
 	transition: scale 225ms;
 }
 
-.hidden {
-	visibility: hidden;
+.view {
+	width: 100%;
+	padding-block: 2vh;
 }
 
 .grid {
-	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(max(350px, 100% / 3 - 10px), 1fr));
 	column-gap: 10px;
@@ -180,21 +93,21 @@ img {
 	border: 1px solid black;
 }
 
-.buttons {
+.pagination {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 
-.buttons > button {
+.pagination > button {
 	align-self: end;
 	padding: 1em 1em;
 	border: 1px solid black;
 	user-select: none;
 }
 
-.buttons > button:hover {
+.pagination > button:hover {
 	background-color: aliceblue;
 }
 
@@ -212,4 +125,47 @@ img {
 	width: 30px;
 	aspect-ratio: 1;
 	filter: drop-shadow(0px 0px 1px black);
+}
+
+#emptyListText {
+	text-align: center;
+}
+
+#clearFilterBtn {
+	padding: 1em;
+	border: 1px solid black;
+}
+
+.empty {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	row-gap: 2em;
+}
+
+#loadingSpinner {
+	position: fixed;
+	opacity: 1;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	visibility: visible;
+
+	background-color: transparent;
+	backdrop-filter: blur(3px);
+	z-index: 100;
+	transition: visibility 225ms, opacity 225ms;
+}
+
+#loadingSpinner svg {
+	width: 70px;
+	aspect-ratio: 1;
+}
+
+#loadingSpinner.d-none {
+	visibility: hidden;
+	opacity: 0;
 }
