--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ img {
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(max(350px, 100% / 3 - 10px), 1fr));
-	column-gap: 10px;
-	row-gap: 1em;
+	grid-template-columns: repeat(auto-fill, minmax(max(290px, 100% / 3 - 2em), 1fr));
+	column-gap: 2em;
+	row-gap: 2em;
 }
 
 .pokemon-container * {
@@ -24,7 +24,7 @@ img {
 	width: 100%;
 	background-color: color-mix(in hsl, blue 70%, white);
 
-	padding: 1em 2em;
+	padding: 1em 1.5em;
 
 	display: flex;
 	justify-content: space-between;
@@ -98,6 +98,10 @@ img {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+.pagination.d-none {
+	display: none;
 }
 
 .pagination > button {
