--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,5 @@
 footer {
+	height: 5dvh;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -6,19 +7,34 @@ footer {
 }
 
 header {
+	height: 15dvh;
+	padding-block: 1vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 5em;
+	column-gap: 5em;
+	row-gap: 1em;
 }
 
 section {
 	position: relative;
-	height: 80vh;
+	min-height: 80dvh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: start;
+}
+
+@media (width <= 1000px) {
+	header {
+		position: sticky;
+		top: 1em;
+		background-color: color-mix(in hsl, white, transparent 80%);
+		backdrop-filter: blur(3px);
+		z-index: var(--z-fixed);
+		flex-direction: column;
+		align-items: center;
+	}
 }
