--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@ img {
 
 .view {
 	width: 100%;
-	padding-block: 2vh;
+	padding-block: 5vh;
 }
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(max(290px, 100% / 3 - 2em), 1fr));
-	column-gap: 2em;
-	row-gap: 2em;
+	grid-template-columns: repeat(auto-fill, minmax(max(290px, 100% / 4 - 2em), 1fr));
+	grid-auto-rows: 105px;
+	column-gap: 1em;
+	row-gap: 1em;
 }
 
 .pokemon-container * {
@@ -24,7 +25,7 @@ img {
 	width: 100%;
 	background-color: color-mix(in hsl, blue 70%, white);
 
-	padding: 1em 1.5em;
+	padding: 0.75em 1.25em;
 
 	display: flex;
 	justify-content: space-between;
@@ -45,7 +46,7 @@ img {
 }
 
 .pokemon-container:hover .pokemon-img {
-	scale: 2.4;
+	scale: 2;
 	filter: drop-shadow(0px 0px 3px white);
 }
 
@@ -64,7 +65,7 @@ img {
 .pokemon-img {
 	height: 100%;
 	aspect-ratio: 1;
-	scale: 1.8;
+	scale: 1.5;
 	transition: scale 225ms;
 	filter: drop-shadow(0px 0px 3px black);
 }
@@ -82,15 +83,44 @@ img {
 }
 
 #genSelect {
+	position: relative;
 	padding: 0.25em 1em;
 	border-radius: none;
 	border: 1px solid black;
+	box-shadow: 0px 0px 5px var(--color-black-darker);
+	background-color: var(--color-white-lighter);
 }
 
 #filterInput {
 	padding: 0.25em 1em;
 	border-radius: none;
 	border: 1px solid black;
+	box-shadow: 0px 0px 5px var(--color-black-darker);
+	transition: box-shadow 1s, border-color 1s;
+	background-color: var(--color-white-lighter);
+}
+
+#filterInput:disabled {
+	position: relative;
+	padding: 0.25em 1em;
+	border-radius: none;
+	background-color: gray;
+	cursor: auto;
+}
+
+#filterInput:disabled::placeholder {
+	color: white;
+	font-size: 16px;
+}
+
+#filterInput::placeholder {
+	color: inherit;
+	font-size: 16px;
+}
+
+#filterInput.highlight {
+	border-color: red;
+	box-shadow: 0px 0px 10px red;
 }
 
 .pagination {
@@ -105,8 +135,7 @@ img {
 }
 
 .pagination > button {
-	align-self: end;
-	padding: 1em 1em;
+	padding: 0.5em 0.5em;
 	border: 1px solid black;
 	user-select: none;
 }
@@ -149,18 +178,18 @@ img {
 }
 
 #loadingSpinner {
-	position: fixed;
+	position: absolute;
 	opacity: 1;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	visibility: visible;
 
 	background-color: transparent;
-	backdrop-filter: blur(3px);
-	z-index: 100;
+	backdrop-filter: blur(2px);
+	z-index: var(--z-loading-spinner);
 	transition: visibility 225ms, opacity 225ms;
 }
 
@@ -172,4 +201,27 @@ img {
 #loadingSpinner.d-none {
 	visibility: hidden;
 	opacity: 0;
+}
+
+#bigCardContainer {
+	position: fixed;
+	width: 100%;
+	height: 100dvh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	backdrop-filter: blur(2px);
+	z-index: var(--z-fixed);
+}
+
+#bigCard {
+	width: 50%;
+	height: 50%;
+	background-color: red;
+}
+
+#bigCardContainer.d-none {
+	display: none;
 }
