add: Big Card nun hinzugefügt und fast fertig. Ich möchte noch Stärken und Schwächen anzeigen lassen aber das muss noch recherchiert werden. Soweit steht alles. Es ist Responsive und funktional. Außerdem noch Sound beim öffnen der Pokemon-Karte hinzugefügt. CSS und Javascript muss noch aufgeräumt werden.

--- a/css/type-combos.css
+++ b/css/type-combos.css
@@ -1,4 +1,4 @@
-.poison {
+/* .poison {
 	background-color: var(--color-poison);
 }
 
@@ -68,9 +68,9 @@
 
 .fairy {
 	background-color: var(--color-fairy);
-}
+} */
 
-.poison.grass {
+/* .poison.grass {
 	background: linear-gradient(
 		to right,
 		var(--color-poison) 0%,
@@ -2823,4 +2823,4 @@
 		var(--color-steel) 50%,
 		var(--color-steel) 100%
 	);
-}
+} */
