--- a/css/layout.css
+++ b/css/layout.css
@@ -1,18 +1,20 @@
 footer {
-	height: 5dvh;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
-}
-
-header {
-	height: 15dvh;
-	padding-block: 1vh;
+	height: 6dvh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+
+	background-color: var(--color-blue-darker);
+	border-top: 1px solid var(--color-black-lighter);
+}
+
+header {
+	height: 14dvh;
+	padding-block: 1vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	column-gap: 5em;
 	row-gap: 1em;
 }
@@ -30,11 +32,16 @@ section {
 @media (width <= 1000px) {
 	header {
 		position: sticky;
+		height: unset;
 		top: 1em;
 		background-color: color-mix(in hsl, white, transparent 80%);
 		backdrop-filter: blur(3px);
 		z-index: var(--z-fixed);
 		flex-direction: column;
 		align-items: center;
+	}
+
+	section {
+		padding-top: 3vh;
 	}
 }
