--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,23 @@ img {
 
 .view {
 	width: 100%;
-	padding-block: 5vh;
+	padding-block: 3vh;
 }
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(max(290px, 100% / 4 - 2em), 1fr));
-	grid-auto-rows: 105px;
-	column-gap: 1em;
-	row-gap: 1em;
+	grid-template-columns: repeat(auto-fill, minmax(max(270px, 100% / 4 - 2em), 1fr));
+	grid-auto-rows: 60px;
+	column-gap: 2em;
+	row-gap: 2em;
+	padding-inline: 2em;
+
+	background-color: var(--color-blue-lighter);
+
+	border-radius: var(--border-radius);
+	box-shadow: var(--color-blue-darker) 1px 1px 5px 0px, var(--color-blue-darker) -1px -1px 5px 0px,
+		hsl(from var(--color-blue-lighter) h s 60%) 1px 1px 5px 0px inset,
+		hsl(from var(--color-blue-lighter) h s 60%) -1px -1px 5px 0px inset;
 }
 
 .pokemon-container * {
@@ -20,6 +28,10 @@ img {
 }
 
 .pokemon-container {
+	-webkit-tap-highlight-color: transparent;
+	--color-type-one: blue;
+	--color-type-two: blue;
+
 	position: relative;
 	height: 100%;
 	width: 100%;
@@ -35,14 +47,26 @@ img {
 	user-select: none;
 	transition: scale 225ms;
 
-	border-radius: var(--border-radius);
+	border-radius: 30px;
+	outline: 1px solid var(--color-black-lighter);
+
+	background: linear-gradient(
+		to right,
+		var(--color-type-one) 0%,
+		var(--color-type-one) 50%,
+		var(--color-type-two) 50%,
+		var(--color-type-two) 100%
+	);
+
+	box-shadow: 2px 2px 10px 0px var(--color-black-darker);
 
 	cursor: pointer;
 }
 
 .pokemon-container:hover {
-	outline: 1px solid black;
-	box-shadow: 1px 1px 5px 2px black;
+	outline: 1px solid white;
+	box-shadow: 1px 1px 10px 2px white;
+	scale: 1.05;
 }
 
 .pokemon-container:hover .pokemon-img {
@@ -59,7 +83,7 @@ img {
 }
 
 .pokemon-container:hover .name-id-container > * {
-	scale: 1.3;
+	scale: 1.2;
 }
 
 .pokemon-img {
@@ -72,38 +96,60 @@ img {
 
 .name-id-container {
 	flex: 1;
-	font-size: 20px;
+	font-size: var(--fs-normal);
 	display: flex;
 	flex-direction: column;
 	align-items: start;
 
-	row-gap: 1em;
+	column-gap: 1em;
 
 	height: 80%;
 }
 
-#genSelect {
+.pokemon-name {
+	text-shadow: 2px 2px 2px var(--color-black-darker);
+}
+
+.pokemon-id {
+	font-size: 12px;
+	text-shadow: 1px 1px 2px var(--color-black-darker);
+}
+
+select {
 	position: relative;
-	padding: 0.25em 1em;
-	border-radius: none;
-	border: 1px solid black;
+	padding: 0.5em 1em;
 	box-shadow: 0px 0px 5px var(--color-black-darker);
+	background-color: var(--color-white);
+	border-radius: 20px;
+
+	transition: scale 225ms;
+}
+
+#genSelect:focus {
+	outline: 2px dotted black;
 	background-color: var(--color-white-lighter);
 }
 
-#filterInput {
-	padding: 0.25em 1em;
+.selectors {
+	display: flex;
+	align-items: center;
+	column-gap: 2em;
+}
+
+input {
+	padding: 0.5em 1em;
 	border-radius: none;
-	border: 1px solid black;
 	box-shadow: 0px 0px 5px var(--color-black-darker);
-	transition: box-shadow 1s, border-color 1s;
-	background-color: var(--color-white-lighter);
+	transition: box-shadow 1s, scale 225ms;
+	border-radius: 20px;
+
+	background: url(../assets/svg/search.svg) no-repeat 1px 1px;
+	background-size: 200% 100%;
+	background-position: 15% 0px;
+	background-color: var(--color-white);
 }
 
 #filterInput:disabled {
-	position: relative;
-	padding: 0.25em 1em;
-	border-radius: none;
 	background-color: gray;
 	cursor: auto;
 }
@@ -123,7 +169,13 @@ img {
 	box-shadow: 0px 0px 10px red;
 }
 
+#filterInput:focus {
+	outline: 2px dotted black;
+	background-color: var(--color-white-lighter);
+}
+
 .pagination {
+	padding-block: 2vh;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
@@ -135,23 +187,25 @@ img {
 }
 
 .pagination > button {
-	padding: 0.5em 0.5em;
-	border: 1px solid black;
+	padding: 0.5em 1em;
+	/* border: 1px solid black; */
 	user-select: none;
-}
 
-.pagination > button:hover {
-	background-color: aliceblue;
+	border-radius: 25px;
+	background-color: var(--color-white-darker);
+	box-shadow: 0px 0px 10px var(--color-black-lighter);
+
+	transition: scale 225ms, box-shadow 225ms, background-color 225ms;
 }
 
 .types-container {
 	flex: 1;
 	height: 100%;
 	display: flex;
-	flex-direction: column;
+	/* flex-direction: column; */
 	align-items: end;
-	justify-content: start;
-	row-gap: 1em;
+	justify-content: end;
+	column-gap: 1em;
 }
 
 .types-container > img {
@@ -217,11 +271,141 @@ img {
 }
 
 #bigCard {
-	width: 50%;
-	height: 50%;
-	background-color: red;
+	width: clamp(320px - 2em, 320px - 2em + 5vw, 450px);
+	height: 600px;
+
+	background: linear-gradient(
+		to right,
+		hsl(from var(--color-type-one) h s l / 0.95) 0%,
+		hsl(from var(--color-type-one) h s l / 0.95) 50%,
+		hsl(from var(--color-type-two) h s l / 0.95) 50%,
+		hsl(from var(--color-type-two) h s l / 0.95) 100%
+	);
+	padding: 1em;
+	border: 1px solid black;
+	box-shadow: 1px 1px 10px var(--color-black-lighter);
+	backdrop-filter: blur(10px);
+
+	border-radius: 45px;
+	display: grid;
+	grid-auto-flow: column;
+	grid-template-rows: 10% 25% 20% 45%;
 }
 
 #bigCardContainer.d-none {
 	display: none;
+}
+
+#bigCard h3 {
+	color: white;
+	text-shadow: 1px 1px 5px black;
+	text-align: center;
+}
+
+.card-img-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	row-gap: 1em;
+}
+
+.card-img-container > img {
+	height: 100%;
+	object-fit: cover;
+	scale: 1.5;
+}
+
+.big-types {
+	display: flex;
+	column-gap: 1em;
+}
+
+.big-types img {
+	filter: drop-shadow(0px 0px 1px black);
+}
+
+.stats {
+	color: white;
+	padding-inline: 1em;
+	padding-block: 1em;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 5fr 1fr;
+	/* border: 1px solid black; */
+	border-radius: 30px;
+}
+
+.stats > * {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+}
+
+.stats > * > * {
+	text-shadow: 1px 1px 5px black;
+	width: 100%;
+	border-bottom: 1px solid black;
+}
+
+.stats > * > span {
+	padding-inline: 0.25em;
+	padding-block: 0.25em;
+}
+
+.stat-names {
+	justify-self: start;
+}
+
+.stat-names > span {
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+	text-align: start;
+}
+
+.stat-values {
+	justify-self: end;
+}
+
+.stat-values > span {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+	text-align: end;
+}
+
+@media (width <= 1000px) {
+	.types-container {
+		column-gap: 0.5em;
+	}
+	.selectors {
+		flex-direction: column;
+		row-gap: 1em;
+	}
+}
+
+select:hover,
+input:hover,
+button:hover {
+	scale: 1.1;
+	background-color: var(--color-white-lighter);
+	box-shadow: 0px 0px 10px var(--color-white);
+}
+
+@media (width <= 768px) {
+	.pagination {
+		padding-inline: 1em;
+		column-gap: 1em;
+	}
+
+	.pagination > button {
+		padding: 0.5em 0.5em;
+	}
+	section {
+		padding-inline: 0;
+	}
+	.grid {
+		padding-inline: 1em;
+	}
 }
