--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,23 @@ img {
 	transition: scale 225ms;
 }
 
+.sound {
+	width: 40px;
+	height: 40px;
+	background-image: url("../assets/svg/sound_off.svg");
+	background-position: center;
+	background-size: cover;
+}
+
+.sound:has(:checked) {
+	background-image: url("../assets/svg/sound_on.svg");
+}
+
+#sound {
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+}
 .view {
 	width: 100%;
 	padding-block: 3vh;
@@ -208,7 +225,7 @@ input {
 	column-gap: 1em;
 }
 
-.types-container > img {
+.types-container img {
 	width: 30px;
 	aspect-ratio: 1;
 	filter: drop-shadow(0px 0px 1px black);
@@ -257,7 +274,7 @@ input {
 	opacity: 0;
 }
 
-#bigCardContainer {
+#bigCardOverlay {
 	position: fixed;
 	width: 100%;
 	height: 100dvh;
@@ -266,13 +283,21 @@ input {
 	justify-content: center;
 	align-items: center;
 
-	backdrop-filter: blur(2px);
+	backdrop-filter: blur(4px);
 	z-index: var(--z-fixed);
+	overscroll-behavior: none;
+	touch-action: none;
+}
+
+.big-card-container {
+	width: clamp(320px - 2em, 320px - 2em + 5vw, 450px);
+	height: 600px;
 }
 
 #bigCard {
-	width: clamp(320px - 2em, 320px - 2em + 5vw, 450px);
-	height: 600px;
+	position: relative;
+	width: 100%;
+	height: 100%;
 
 	background: linear-gradient(
 		to right,
@@ -283,26 +308,53 @@ input {
 	);
 	padding: 1em;
 	border: 1px solid black;
-	box-shadow: 1px 1px 10px var(--color-black-lighter);
+	box-shadow: 2px 2px 10px 0px var(--color-black-darker);
 	backdrop-filter: blur(10px);
 
 	border-radius: 45px;
 	display: grid;
 	grid-auto-flow: column;
-	grid-template-rows: 10% 25% 20% 45%;
+	grid-template-rows: 6% 35% 20% 40%;
+	overscroll-behavior: none;
 }
 
-#bigCardContainer.d-none {
+#bigCardOverlay.d-none {
 	display: none;
 }
 
 #bigCard h3 {
 	color: white;
-	text-shadow: 1px 1px 5px black;
+	text-shadow: 2px 2px 2px var(--color-black-darker);
 	text-align: center;
 }
 
+.big-card-btn {
+	border-radius: 20px;
+	background-color: color-mix(in hsl, var(--color-white-lighter), transparent);
+	--btn-width: 60px;
+	--btn-distance: 10em;
+	text-align: center;
+	position: absolute;
+	width: var(--btn-width);
+	aspect-ratio: 1;
+	top: calc(50% - var(--btn-width) / 2);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.big-card-btn.prev {
+	left: calc(-1 * var(--btn-distance));
+	background-image: url("../assets/svg/left.svg");
+}
+
+.big-card-btn.next {
+	right: calc(-1 * var(--btn-distance));
+	background-image: url("../assets/svg/right.svg");
+}
+
 .card-img-container {
+	padding-block: 1em;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -312,9 +364,11 @@ input {
 }
 
 .card-img-container > img {
+	filter: drop-shadow(0px 0px 3px black);
+
 	height: 100%;
 	object-fit: cover;
-	scale: 1.5;
+	scale: 1.3;
 }
 
 .big-types {
@@ -326,6 +380,54 @@ input {
 	filter: drop-shadow(0px 0px 1px black);
 }
 
+.strengths-weaknesses {
+	padding: 1em;
+	width: 100%;
+	padding-block: 0.5em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: end;
+	row-gap: 0.5em;
+	border-radius: 20px;
+
+	background-color: color-mix(in hsl, white, transparent 85%);
+	border: 0.5px solid color-mix(in hsl, black, transparent 75%);
+}
+
+.interaction {
+	padding-block: 0.25em;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-bottom: 0.5px solid black;
+}
+
+.interaction-img-container {
+	display: flex;
+	align-items: center;
+	column-gap: 0.25em;
+}
+
+.interaction-img-container img {
+	width: 24px;
+	aspect-ratio: 1;
+	filter: drop-shadow(0px 0px 1px var(--color-black-darker));
+}
+
+.weak {
+	color: var(--color-white);
+	text-shadow: 2px 2px 1px red;
+	filter: drop-shadow(0px 0px 1px black);
+}
+
+.strong {
+	color: var(--color-white);
+	text-shadow: 2px 2px 1px green;
+	filter: drop-shadow(0px 0px 1px black);
+}
+
 .stats {
 	color: white;
 	padding-inline: 1em;
@@ -333,7 +435,6 @@ input {
 	width: 100%;
 	display: grid;
 	grid-template-columns: 5fr 1fr;
-	/* border: 1px solid black; */
 	border-radius: 30px;
 }
 
@@ -345,12 +446,13 @@ input {
 }
 
 .stats > * > * {
-	text-shadow: 1px 1px 5px black;
 	width: 100%;
 	border-bottom: 1px solid black;
 }
 
 .stats > * > span {
+	text-shadow: 2px 2px 2px var(--color-black-darker);
+
 	padding-inline: 0.25em;
 	padding-block: 0.25em;
 }
@@ -407,5 +509,35 @@ button:hover {
 	}
 	.grid {
 		padding-inline: 1em;
+	}
+
+	.big-card-btn {
+		background-color: transparent;
+		--btn-distance: 3.5em;
+		background-size: 200% 100%;
+		background-position: 35% 100%;
+		background-repeat: no-repeat;
+		background-origin: border-box;
+		filter: invert();
+	}
+
+	.big-card-btn.prev {
+		left: calc(50% - var(--btn-width) / 2);
+		right: revert;
+		top: calc(-1 * var(--btn-distance));
+		bottom: revert;
+		background-image: url("../assets/svg/up.svg");
+	}
+
+	.big-card-btn.next {
+		left: calc(50% - var(--btn-width) / 2);
+		right: revert;
+		bottom: calc(-1 * var(--btn-distance));
+		top: revert;
+		background-image: url("../assets/svg/down.svg");
+	}
+
+	.big-card-btn:active {
+		filter: invert(0%);
 	}
 }
