--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@ img {
 	background-image: url("../assets/svg/sound_on.svg");
 }
 
+.big-pokemon-id {
+	color: white;
+	position: absolute;
+	top: 13em;
+	right: 0;
+	rotate: 90deg;
+	text-shadow: 0px 0px 10px black;
+	font-size: 0.8em;
+}
+
 #sound {
 	width: 100%;
 	height: 100%;
