--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,7 @@ footer {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+	column-gap: 1em;
 
 	background-color: var(--color-blue-darker);
 	border-top: 1px solid var(--color-black-lighter);
